Profile pic added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <!-- Title -->
-        <title>Muhammad Fawad Rafique</title>
+        <header>
+            <title>Muhammad Fawad Rafique</title>
+        </header>
     </head>
     <body>
         <!-- Heading -->
@@ -11,6 +13,8 @@
         <!-- Quote -->
         <p><i>"Yesterday I was clever so I wanted to change the world. Today I am wise so I wanted to change myself." -Rumi </i></p>
         <hr>
+        <!-- Profile picture -->
+        <img src="images/profile_pic.jpeg" alt="My Display Picture" width="300">
         <!-- Description -->
         <h2>Junior Web Development at <a href="https://www.beCode.org">BeCode.org</a></h2>
         <!-- Tables -->
@@ -56,7 +60,8 @@
         <h3>TL;DR</h3>
         <p>Google translate can save you from potential embarrassment.</p>
         <!-- Links to other students -->
-        <h5><a href="https://github.com/ezgihendrickx/markdown-to-html">Previous - EZGI</a> || MUHAMMAD FAWAD RAFIQUE || <a href="https://github.com/degenge/markdown-to-html">Next - GERRIT</a></h5>
-
+        <footer>
+            <h5><a href="https://github.com/ezgihendrickx/markdown-to-html">Previous - EZGI</a> || MUHAMMAD FAWAD RAFIQUE || <a href="https://github.com/degenge/markdown-to-html">Next - GERRIT</a></h5>
+        </footer>
     </body>
 </html>
